--- a/client/package.json
+++ b/client/package.json
@@ -17,9 +17,13 @@
     "@types/jest": "^26.0.23",
     "apexcharts": "^3.39.0",
     "axios": "^0.26.1",
+    "i18next": "^22.4.15",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.2",
     "react-scripts": "^5.0.0",
     "web-vitals": "^1.1.1"
   },
