--- a/.github/workflows/main_kielo-parking-admin.yml
+++ b/.github/workflows/main_kielo-parking-admin.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Node.js version
+      - name: Set up Node.js version 16.x
         uses: actions/setup-node@v2
         with:
           node-version: '16.x'
